<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundpalta"
    android:orientation="vertical"
    tools:context=".PostValidation">


    <ImageView
        android:id="@+id/logo2"
        android:layout_width="200dp"
        android:layout_height="70dp"
        app:srcCompat="@drawable/applogo2"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:id="@+id/Linearlayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <TextView
            android:id="@+id/tvEncargado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/encargado"
            android:layout_marginHorizontal="3dp"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tvNombreSup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="3dp"
            android:textSize="20sp"
            android:text="@string/nombreSup" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:textSize="20sp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tvSubIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitulo"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <LinearLayout

        android:id="@+id/LinearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">


        <EditText
            android:id="@+id/edtCodigo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:autofillHints="@string/codigo"
            android:ems="15"
            android:hint="@string/codigo"
            android:inputType="text"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnScan2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/scan"
            android:textSize="20sp"
            android:backgroundTint="@color/verde7"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout4"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="5dp"

        >

        <Button
            android:id="@+id/btnAgregar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/agregar"
            android:backgroundTint="@color/verde7"
            android:layout_marginHorizontal="5dp" />

        <Button
            android:id="@+id/btnGrupoNuevo"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verde7"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/newGrupo"
            android:layout_marginHorizontal="5dp" />

        <Button
            android:id="@+id/btnHistorial"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verde7"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/historial"
            android:layout_marginHorizontal="5dp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListaTrabajador"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>